# AdventOfCodeSolutions

./: .gitignore  cli.py  pyproject.toml
2023/: README.md
2023/day01/: solution.py  solution.py.bak
2023/day02/: solution.py  solution.py.bak
2023/day03/: solution.py  solution.py.bak
2023/day04/: solution.py  solution.py.bak
2023/day05/: solution.py  solution.py.bak
2023/day06/: solution.py  solution.py.bak
2023/day07/: solution.py  solution.py.bak
2023/day08/: solution.py
2023/day09/: solution.py
2023/day10/: solution.py
2023/day11/: solution.py
2023/day12/: solution.py
2023/day13/: solution.py
2023/day14/: solution.py  solution.py.bak
2023/day15/: solution.py
2023/day16/: solution.py
2023/day17/: solution.py
2023/day18/: solution.py
2023/day19/: solution.py
2023/day20/: solution.py
2023/day21/: solution.py
2023/day22/: solution.py
2023/day23/: solution.py
2023/day24/: solution.py
2023/day25/: solution.py
2024/: README.md  test.py
2024/day01/: solution.py  solution.py.bak
2024/day02/: solution.py  solution.py.bak
2024/day03/: solution.py  solution.py.bak
2024/day04/: solution.py  solution.py.bak
2024/day05/: solution.py  solution.py.bak
2024/day06/: animated.py  solution.py  solution.py.bak
2024/day07/: solution.py  solution.py.bak
2024/day08/: solution.py  solution.py.bak
2024/day09/: solution.py  solution.py.bak
2024/day10/: animate.py  solution.py  solution.py.bak
2024/day11/: solution.py  solution.py.bak
2024/day12/: solution.py  solution.py.bak  test.ipynb
2024/day13/: solution.py  (+1 more)
(+33 files in other folders)
